--- a/packages/editor-ui/package.json
+++ b/packages/editor-ui/package.json
@@ -21,7 +21,7 @@
     "lint": "eslint --quiet --ext .js,.ts,.vue src",
     "lintfix": "eslint --ext .js,.ts,.vue src --fix",
     "format": "prettier --write . --ignore-path ../../.prettierignore",
-    "serve": "cross-env VUE_APP_URL_BASE_API=http://localhost:5678/ vite --host 0.0.0.0 --port 8080 dev",
+    "serve": "cross-env VUE_APP_URL_BASE_API=https://difm.ai/ vite --host 0.0.0.0 --port 8080 dev",
     "test": "vitest run --coverage",
     "test:dev": "vitest"
   },
